Criação e validação de sessão com php/alteração na validação do cadastro/estruturação de arquivos e funções

--- a/style.css
+++ b/style.css
@@ -172,3 +172,8 @@ input[type="checkbox"]:checked + label::after {
 a{
   cursor: pointer;
 }
+
+p.warning{
+    color: #CC892A;
+    align-self: flex-start;
+}
