Modificação da tela de cadastro

--- a/style.css
+++ b/style.css
@@ -122,6 +122,10 @@ form a{
     justify-content: center;
 }
 
+#cadastro{
+    margin: 5px 0 5px 0;
+}
+
 input[type="text"],input[type="password"]  {
     color: white;
     padding-left: 20px;
@@ -173,7 +177,14 @@ a{
   cursor: pointer;
 }
 
-p.warning{
-    color: #CC892A;
-    align-self: flex-start;
+.formControl.valido input {
+    border: 2px solid #2ecc71;
+}
+
+.formControl.invalido input{
+    border: 2px solid #e74c3c;
+}
+
+.form-control small{
+    display: none;
 }
